--- a/TP11/tp11.html
+++ b/TP11/tp11.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP11</title>
-    <script src="app.js"></script>
+    <link rel="stylesheet" href="tp11.css">
+    <script src="tp11.js"></script>
 </head>
 <body>
     <h1>TP11</h1>
