Mise à jour de la section TP2 dans index.html pour changer la description de "À venir (vide)" à "Articles" et ajout d'un lien vers TP2/index.html.

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     <p>Présentation du BTS SIO et spécialités.</p>
                 </a>
 
-                <div class="card card-disabled" id="pair" aria-disabled="true" tabindex="-1">
+                <div class="card card-disabled" id="pair" href="TP2/index.html">
                     <div class="card-icon">⏳</div>
                     <h3>TP2</h3>
-                    <p>À venir (vide).</p>
+                    <p>Articles.</p>
                 </div>
 
                 <a class="card" id="impair" href="TP3/index.html">
