Ajout de liens de retour dans les fonctions JavaScript et mise à jour des options de couleur dans la fonction couleur.

--- a/TP11/tp11.html
+++ b/TP11/tp11.html
@@ -13,5 +13,10 @@
     <button onclick="age()">Verification de l'age</button>
     <button onclick="nom()">Affichage du nom</button>
     <button onclick="couleur()">Changer de couleur</button>
+
+    <footer>
+        <a href="index.html">Retour au hub</a>
+        <p>&copy; 2024 Waël El Harti</p>
+    </footer>
 </body>
 </html>
