--- a/TP11/tp11.html
+++ b/TP11/tp11.html
@@ -15,7 +15,7 @@
     <button onclick="couleur()">Changer de couleur</button>
 
     <footer>
-        <a href="index.html">Retour au hub</a>
+        <a href="../index.html">Retour au hub</a>
         <p>&copy; 2024 Waël El Harti</p>
     </footer>
 </body>
