Suppression de la classe "card-disabled" pour le TP2 dans index.html afin de rendre la carte active.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <p>Présentation du BTS SIO et spécialités.</p>
                 </a>
 
-                <div class="card card-disabled" id="pair" href="TP2/index.html">
+                <div class="card" id="pair" href="TP2/index.html">
                     <div class="card-icon">⏳</div>
                     <h3>TP2</h3>
                     <p>Articles.</p>
