feat: Add new HTML pages and CSS for BTS SIO career paths
- Created cloud.html, contenu.html, cybersecurite.html, datascience.html, devops.html, devweb.html for various IT career descriptions.
- Implemented index.html and sommaire.html for navigation and overview of career paths.
- Added style.css for consistent styling across all pages.
- Included sections on job roles, required skills, salary expectations, and career progression.

--- a/index.html
+++ b/index.html
@@ -27,21 +27,28 @@
         <section class="section">
             <h2 class="section-title">📚 Travaux Pratiques (TP)</h2>
             <div class="cards-grid">
+                
                 <a class="card" id="impair" href="TP1/index.html">
                     <div class="card-icon">🎓</div>
                     <h3>TP1</h3>
                     <p>Présentation du BTS SIO et spécialités.</p>
                 </a>
 
-                <div class="card" id="pair" href="TP2/index.html">
+                <a class="card" id="pair" href="TP2/index.html">
                     <div class="card-icon">⏳</div>
                     <h3>TP2</h3>
                     <p>Articles.</p>
-                </div>
+                </a>
 
-                <a class="card" id="impair" href="TP3/index.html">
+                <a class="card card-disabled" id="impair" href="TP3/">
                     <div class="card-icon">🧭</div>
                     <h3>TP3</h3>
+                    <p>Decouvert des iframes.  </p>
+                </a>
+
+                <a class="card" id="pair" href="TP4/index.html">
+                    <div class="card-icon">🧭</div>
+                    <h3>TP4</h3>
                     <p>Métiers d’avenir et navigation bi-volet.</p>
                 </a>
 
