Ajout des fichiers pour le TP12 : création de la page HTML, du script JavaScript et du contenu d'exercice sur les conditions et saisies utilisateur.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
                     <h3>TP11</h3>
                     <p>TP boutons fonctions JavaScript.</p>
                 </a>
+
+                <a class="card" id="pair" href="TP12/tp12.html">
+                    <div class="card-icon">📘</div>
+                    <h3>TP12</h3>
+                    <p>TP boutons fonctions JavaScript.</p>
+                </a>
             </div>
         </section>
 
