Ajout du fichier CSS tp12.css et mise à jour de tp12.html pour lier le nouveau style. Amélioration des fonctions JavaScript pour la validation des entrées et correction des messages d'affichage.

--- a/TP12/tp12.html
+++ b/TP12/tp12.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TP12</title>
-    <link rel="stylesheet" href="../hub.css">
+    <link rel="stylesheet" href="tp12.css">
     <script src="tp12.js"></script>
 </head>
 <body>
+    <h1>TP12 - Exercices de JavaScript</h1>
     <button onclick="ex1_moyenne()">Exercice 1 : Calcul de moyenne</button>
     <button onclick="ex2_temperature()">Exercice 2 : Test de température</button>
     <button onclick="ex3_comparaison()">Exercice 3 : Comparaison de deux nombres</button>
