Ajout de l'iframe pour l'affichage des résultats et mise à jour des fonctions pour écrire dans l'iframe au lieu de document.write.

--- a/TP12/tp12.html
+++ b/TP12/tp12.html
@@ -12,7 +12,9 @@
     <button onclick="ex1_moyenne()">Exercice 1 : Calcul de moyenne</button>
     <button onclick="ex2_temperature()">Exercice 2 : Test de température</button>
     <button onclick="ex3_comparaison()">Exercice 3 : Comparaison de deux nombres</button>
-   
+    
+    <iframe id="resultatjs" title="Resultat JavaScript"></iframe>
+
     <footer>
         <p>© 2024 Waël El Harti - BTS SIO 1ère année</p>
         <a href="../index.html">Retour au hub</a>
