feat: Implement responsive dropdown menu using HTML and CSS
- Created a responsive dropdown menu in HTML and CSS for Mission 1.
- Added HTML structure for the menu with nested lists for submenus.
- Developed CSS styles for the menu, including hover effects and responsive design.
- Integrated media queries to adapt the menu for smaller screens.
- Added multiple pages for portfolio projects with consistent styling.
- Established a cohesive design theme with a dark mode aesthetic and accent colors.

--- a/index.html
+++ b/index.html
@@ -129,10 +129,16 @@
                     <p>Rapport de mission (PDF).</p>
          </a>
         
-           <a class="card" href="Mission5/cv.html">
+        <a class="card" href="Mission5/cv.html">
                     <div class="card-icon">🎉</div>
                     <h3>Mission 5</h3>
                     <p>CV HTML</p>
+        </a>
+
+        <a class="card" href="Mission6/index.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 6</h3>
+                    <p>Portfolio TP 2</p>
         </a>
             </div>
         </section>
