Ajout de la page TP13 avec les fonctions JavaScript pour l'affichage de tableaux et la gestion des connexions.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,12 @@
                     <h3>TP12</h3>
                     <p>TP boutons fonctions JavaScript.</p>
                 </a>
+
+                   <a class="card" id="pair" href="TP13/tp13.html">
+                    <div class="card-icon">📘</div>
+                    <h3>TP13</h3>
+                    <p></p>
+                </a>
             </div>
         </section>
 
