Add invoice generation feature with HTML, CSS, and JavaScript
- Created a new HTML file (tp14.html) for the invoice layout, including sections for recipient and sender addresses, as well as a table for itemized billing.
- Developed a CSS file (style.css) to style the invoice, ensuring a clean and professional appearance with responsive design for printing.
- Implemented JavaScript functionality (tp14.js) to calculate item totals and overall invoice total, along with reset and print features.

--- a/index.html
+++ b/index.html
@@ -100,9 +100,15 @@
                     <p>TP boutons fonctions JavaScript.</p>
                 </a>
 
-                   <a class="card" id="pair" href="TP13/tp13.html">
+                <a class="card" id="impair" href="TP13/tp13.html">
                     <div class="card-icon">📘</div>
                     <h3>TP13</h3>
+                    <p></p>
+                </a>
+
+                <a class="card" id="pair" href="TP14/tp14.html">
+                    <div class="card-icon">📘</div>
+                    <h3>TP14</h3>
                     <p></p>
                 </a>
             </div>
