--- a/TP13/tp13.html
+++ b/TP13/tp13.html
@@ -14,6 +14,9 @@
     <button onclick="location.href='tableau2.html'">Afficher Tableau 2</button>
     <button onclick="location.href='connexion.html'">Se connecter</button>
     <button onclick="location.href='chaine.html'">Chaîne de caractères</button>
+    <button onclick="location.href='tableau3.html'">Afficher Tableau 3</button>
+    <button onclick="seconnecter3()">Se connecter 2</button>
+    <script src="connexion.js"></script>
     <nav>
         <a href="../index.html">Retour au menu des TP</a>
     </nav>
