feat: Mise à jour du titre de la page d'accueil pour inclure le TP15

--- a/TP13/tp13.html
+++ b/TP13/tp13.html
@@ -8,7 +8,7 @@
     <script src="tp13.js"></script>
 </head>
 <body>
-    <h1>Bienvenue dans le TP13</h1>
+    <h1>Bienvenue dans le TP13 et 15</h1>
     
     <button onclick="location.href='tableau.html'">Afficher Tableau</button>
     <button onclick="location.href='tableau2.html'">Afficher Tableau 2</button>
