feat: Ajout de la base de données pour l'agence de location de voitures avec tables et données initiales

--- a/index.html
+++ b/index.html
@@ -154,6 +154,29 @@
         </a>
             </div>
         </section>
+        <section class="section">
+            <h2 class="section-title">🏅 Certifications</h2>
+            <div class="cards-grid">
+                <a class="card" id="impair" href="Certifications/moocansii.html">
+                    <div class="card-icon">🏆</div>
+                    <h3>MOOC de l'Anssi</h3>
+                    <p>Certifications obtenues grace au MOOC de l'Anssi.</p>
+                </a>
+
+            </div>
+        </section>
+
+        <section class="section">
+            <h2 class="section-title">💾 BdD</h2>
+            <div class="cards-grid">
+                <a class="card" id="impair" href="BDD/locationvoiture.html">
+                    <div class="card-icon">📄</div>
+                    <h3>BDD d'une entreprise de location de voiture</h3>
+                    <p>Schéma, tables, clés primaires/étrangères.</p>
+                </a>
+
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
