feat: Mise à jour des liens vers la page de la base de données de location de voitures et ajout d'un PDF pour le TP 1

--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -30,6 +30,16 @@
 		<p>
 			<a class="button" href="agence_location_bdd.sql">Voir la base (SQL)</a>
 		</p>
+
+		<h2 style="margin-top:24px; font-size:18px;">TP 1 BD (PDF)</h2>
+		<iframe
+			src="tp_1_BD.pdf"
+			title="TP 1 BD"
+			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
+		></iframe>
+		<p style="margin-top:8px;">
+			<a class="button" href="tp_1_BD.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
+		</p>
 	</main>
 </body>
 </html>
