--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
         <section class="section">
             <h2 class="section-title">💾 BdD</h2>
             <div class="cards-grid">
-                <a class="card" id="impair" href="BDD/locationvoiture.html">
+                <a class="card" id="impair" href="BDD/LocationVoiture/locationvoiture.html">
                     <div class="card-icon">📄</div>
                     <h3>BDD d'une entreprise de location de voiture</h3>
                     <p>Schéma, tables, clés primaires/étrangères.</p>
