feat: Ajout d'une page pour la certification ANSSI et mise à jour de la présentation de la base de données

--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -19,7 +19,7 @@
 <body>
 	<main>
 		<h1>Base de données — Agence de location</h1>
-		<p>Présentation ultra‑rapide: 5 tables relationnelles.</p>
+		<p>Présentation rapide de la base de données : 5 tables relationnelles.</p>
 		<ul>
 			<li>categories</li>
 			<li>clients</li>
@@ -31,6 +31,9 @@
 			<a class="button" href="agence_location_bdd.sql">Voir la base (SQL)</a>
 		</p>
 
+		<h2 style="margin-top:24px; font-size:18px;">Modèle de données</h2>
+		<img src="modele.png" alt="Modèle de données" width="500" />
+		
 		<h2 style="margin-top:24px; font-size:18px;">TP 1 BD (PDF)</h2>
 		<iframe
 			src="tp_1_BD.pdf"
