feat: Ajout d'un lien de retour au menu des TP dans les pages locationvoiture.html et moocansii.html

--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -44,5 +44,8 @@
 			<a class="button" href="tp_1_BD.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
 		</p>
 	</main>
+	 <nav>
+        <a href="../index.html">Retour au menu des TP</a>
+    </nav>
 </body>
 </html>
