--- a/Certifications/moocansii.html
+++ b/Certifications/moocansii.html
@@ -187,6 +187,8 @@
 		<h2>Synthèse finale</h2>
 		<p>Le MOOC structure l'acquisition de réflexes : classification des actifs, réduction proactive de surface d'attaque, défense en profondeur, gestion des identités, chiffrement systématique, journalisation riche et entraînement continu des équipes. L'objectif est d'atteindre une posture résiliente capable de détecter tôt, contenir rapidement et récupérer efficacement.</p>
 	</section>
-
+	 <nav>
+        <a href="../index.html">Retour au menu des TP</a>
+    </nav>
 </body>
 </html>
