--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -45,7 +45,7 @@
 		</p>
 	</main>
 	 <nav>
-        <a href="../index.html">Retour au menu des TP</a>
+        <a href="../../index.html">Retour au menu des TP</a>
     </nav>
 </body>
 </html>
