--- a/Certifications/moocansii.html
+++ b/Certifications/moocansii.html
@@ -5,23 +5,7 @@
 	<meta name="viewport" content="width=device-width,initial-scale=1" />
 	<title>MOOC ANSSI – Synthèse & Certification</title>
 	<meta name="description" content="Page d'hébergement de la future certification ANSSI et synthèse des sections du MOOC cybersécurité." />
-	<style>
-		:root { color-scheme: light dark; }
-		body { margin:0; font-family: system-ui, Arial, sans-serif; line-height:1.4; padding:24px; max-width:1100px; margin-inline:auto; }
-		h1 { margin:0 0 16px; font-size:clamp(26px,4vw,36px); }
-		h2 { margin:32px 0 12px; font-size:20px; }
-		h3 { margin:22px 0 8px; font-size:16px; }
-		p, li { font-size:14px; }
-		iframe { width:100%; height:480px; border:1px solid #999; border-radius:8px; background:#f8f8f8; }
-		.placeholder { display:flex; align-items:center; justify-content:center; height:100%; color:#666; font-style:italic; }
-		nav { display:flex; flex-wrap:wrap; gap:6px; margin:0 0 24px; }
-		nav a { padding:6px 10px; border:1px solid currentColor; border-radius:6px; text-decoration:none; font-size:13px; }
-		section { margin-bottom:28px; }
-		ul { margin:8px 0 16px; padding-left:20px; }
-		.grid { display:grid; gap:16px; grid-template-columns:repeat(auto-fit,minmax(240px,1fr)); }
-		.card { border:1px solid #ccc; border-radius:8px; padding:12px 14px; background:#fafafa; }
-		@media (prefers-color-scheme: dark){ body { background:#111; color:#ddd; } iframe { background:#222; } .card{ background:#1b1b1b; border-color:#333;} }
-	</style>
+	<link rel="stylesheet" href="mooc.css" />
 	<script>
 		// Vérifie si le PDF est chargeable; s'il échoue on affiche le message interne.
 		function verifierPDF(){
@@ -36,26 +20,11 @@
 <body>
 	<h1>MOOC ANSSI – Synthèse & Future Certification</h1>
 	<p>Cette page contiendra mon attestation officielle (iframe) dès obtention, suivie d'un compte rendu détaillé des modules du MOOC de l'ANSSI.</p>
-	<nav aria-label="Sommaire rapide">
-		<a href="#certification">Certification</a>
-		<a href="#introduction">Intro</a>
-		<a href="#menaces">Menaces</a>
-		<a href="#authentification">Authentification</a>
-		<a href="#crypto">Cryptographie</a>
-		<a href="#reseaux">Réseaux</a>
-		<a href="#poste">Poste</a>
-		<a href="#mobile">Mobile</a>
-		<a href="#web">Web</a>
-		<a href="#donnees">Sauvegarde</a>
-		<a href="#rgpd">RGPD</a>
-		<a href="#sensibilisation">Sensibilisation</a>
-		<a href="#incident">Incident</a>
-		<a href="#gouvernance">Gouvernance</a>
-	</nav>
+	
 
 	<section id="certification">
-		<h2>Certification ANSSI (à venir)</h2>
-		<iframe id="certFrame" src="certification-anssi.pdf" title="Certification ANSSI">
+		<h2>Certification ANSSI</h2>
+		<iframe id="certFrame" src="SWInJBCvWHKn8SYHH5OjBjA0ZvKmo196b3uLXWRd9hZeF9x3nnEw3YAuuMkU_173341_17112025.pdf" title="Certification ANSSI">
 			<div class="placeholder">Chargement iframe…</div>
 		</iframe>
 		<p id="noPdfMsg" hidden style="margin-top:10px; font-size:13px; color:#666;">Le PDF n'est pas encore disponible. Quand je l'aurai obtenu, je placerai le fichier <code>certification-anssi.pdf</code> dans ce dossier pour qu'il s'affiche automatiquement ici.</p>
