feat: Ajout de la base de données pour le centre de formation et mise à jour des pages de location de voitures

--- a/index.html
+++ b/index.html
@@ -160,12 +160,12 @@
                 <a class="card" id="impair" href="Certifications/moocansii.html">
                     <div class="card-icon">🏆</div>
                     <h3>MOOC de l'Anssi</h3>
-                    <p>Certifications obtenues grace au MOOC de l'Anssi.</p>
+                    <p>Certification obtenue grace au MOOC de l'Anssi.</p>
                 </a>
                 <a class="card" id="impair" href="Certifications/moocebios.html">
                     <div class="card-icon">🏆</div>
                     <h3>MOOC EBIOS</h3>
-                    <p>Certifications obtenues grace au MOOC EBIOS.</p>
+                    <p>Certificationsobtenue grace au MOOC EBIOS.</p>
                 </a>
 
             </div>
@@ -178,6 +178,12 @@
                     <div class="card-icon">📄</div>
                     <h3>BDD d'une entreprise de location de voiture</h3>
                     <p>Schéma, tables, clés primaires/étrangères.</p>
+                </a>
+
+                <a class="card" id="impair" href="BDD/CentreFormation/centreformation.html">
+                    <div class="card-icon">🎓</div>
+                    <h3>BDD Centre de Formation</h3>
+                    <p>Base de données d'un centre de formation.</p>
                 </a>
 
             </div>
