--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -36,13 +36,24 @@
 		
 		<h2 style="margin-top:24px; font-size:18px;">TP 1 BD (PDF)</h2>
 		<iframe
-			src="tp_1_BD.pdf"
+			src="TP1SQL.pdf"
 			title="TP 1 BD"
 			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
 		></iframe>
 		<p style="margin-top:8px;">
-			<a class="button" href="tp_1_BD.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
+			<a class="button" href="TP1SQL.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
 		</p>
+
+		<h2 style="margin-top:24px; font-size:18px;">TP 2 SQL (PDF)</h2>
+		<iframe
+			src="TP2SQL.pdf"
+			title="TP 2 SQL"
+			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
+		></iframe>
+		<p style="margin-top:8px;">
+			<a class="button" href="TP2SQL.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
+		</p>
+		
 	</main>
 	 <nav>
         <a href="../../index.html">Retour au menu des TP</a>
