feat: Ajout d'un lien vers la base de données de gestion de stock dans index.html

--- a/index.html
+++ b/index.html
@@ -186,6 +186,11 @@
                     <p>Base de données d'un centre de formation.</p>
                 </a>
 
+                 <a class="card" id="impair" href="BDD/GestionStock/gestionstock.html">
+                    <div class="card-icon">🎓</div>
+                    <h3>BDD Gestion de Stock</h3>
+                    <p>Base de données pour la gestion de stock.</p>
+                </a>
             </div>
         </section>
     </main>
