Add quiz functionality with HTML, CSS, and JavaScript
- Created quiz.html for the quiz structure and questions.
- Added quiz.css for styling the quiz layout and elements.
- Implemented quiz.js for handling quiz logic, scoring, and displaying corrections.
- Included radio buttons for single-choice questions and checkboxes for multiple-choice questions.
- Added functions for calculating scores, displaying corrections in a new window, and resetting the quiz.

--- a/index.html
+++ b/index.html
@@ -152,6 +152,24 @@
                     <h3>Mission 6</h3>
                     <p>Portfolio TP 2</p>
         </a>
+
+        <a class="card" href="Certifications/moocansii.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 7</h3>
+                    <p></p>
+        </a>
+
+        <a class="card" href="Certifications/AtelierRGPD/atelierrgpd.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 8</h3>
+                    <p></p>
+        </a>
+
+        <a class="card" href="Mission9/quiz.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 9</h3>
+                    <p>Quiz</p>
+        </a>
             </div>
         </section>
         <section class="section">
