--- a/BDD/CentreFormation/centreformation.html
+++ b/BDD/CentreFormation/centreformation.html
@@ -4,19 +4,10 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>BDD Centre de Formation</title>
-	<style>
-		:root { color-scheme: light dark; }
-		body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 24px; display: grid; place-items: center; }
-		main { max-width: 720px; text-align: center; }
-		h1 { font-size: clamp(22px, 4vw, 32px); margin: 0 0 12px; }
-		p { margin: 8px 0 16px; }
-		ul { list-style: none; padding: 0; margin: 8px 0 20px; display: flex; gap: 8px; flex-wrap: wrap; justify-content: center; }
-		li { padding: 6px 10px; border: 1px solid #bbb; border-radius: 6px; font-size: 14px; }
-		a.button { display: inline-block; padding: 10px 14px; border: 1px solid currentColor; border-radius: 8px; text-decoration: none; }
-	</style>
+	<link rel="stylesheet" href="../bdd.css" />
 	<meta name="description" content="Présentation de la base de données d'un centre de formation (tables et lien direct vers le SQL)." />
 </head>
-<body>
+<body class="centered">
 	<main>
 		<h1>Base de données — Centre de Formation</h1>
 		<p>Présentation rapide de la base de données du centre de formation.</p>
@@ -24,12 +15,8 @@
 			<a class="button" href="Formation.sql">Voir la base (SQL)</a>
 		</p>
 
-		<h2 style="margin-top:24px; font-size:18px;">TP 3 SQL (PDF)</h2>
-		<iframe
-			src="TP3SQL.pdf"
-			title="TP 3 SQL"
-			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
-		></iframe>
+		<h2>TP 3 SQL (PDF)</h2>
+		<iframe src="TP3SQL.pdf" title="TP 3 SQL"></iframe>
 		<p style="margin-top:8px;">
 			<a class="button" href="TP3SQL.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
 		</p>
