--- a/BDD/LocationVoiture/locationvoiture.html
+++ b/BDD/LocationVoiture/locationvoiture.html
@@ -4,23 +4,14 @@
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<title>BDD Location de Voitures</title>
-	<style>
-		:root { color-scheme: light dark; }
-		body { font-family: system-ui, Arial, sans-serif; margin: 0; padding: 24px; display: grid; place-items: center; }
-		main { max-width: 720px; text-align: center; }
-		h1 { font-size: clamp(22px, 4vw, 32px); margin: 0 0 12px; }
-		p { margin: 8px 0 16px; }
-		ul { list-style: none; padding: 0; margin: 8px 0 20px; display: flex; gap: 8px; flex-wrap: wrap; justify-content: center; }
-		li { padding: 6px 10px; border: 1px solid #bbb; border-radius: 6px; font-size: 14px; }
-		a.button { display: inline-block; padding: 10px 14px; border: 1px solid currentColor; border-radius: 8px; text-decoration: none; }
-	</style>
+	<link rel="stylesheet" href="../bdd.css" />
 	<meta name="description" content="Présentation ultra-minimale de la base de données d'une agence de location (tables et lien direct vers le SQL)." />
 </head>
-<body>
+<body class="centered">
 	<main>
 		<h1>Base de données — Agence de location</h1>
 		<p>Présentation rapide de la base de données : 5 tables relationnelles.</p>
-		<ul>
+		<ul class="table-list">
 			<li>categories</li>
 			<li>clients</li>
 			<li>employes</li>
@@ -31,25 +22,17 @@
 			<a class="button" href="agence_location_bdd.sql">Voir la base (SQL)</a>
 		</p>
 
-		<h2 style="margin-top:24px; font-size:18px;">Modèle de données</h2>
+		<h2>Modèle de données</h2>
 		<img src="modele.png" alt="Modèle de données" width="500" />
 		
-		<h2 style="margin-top:24px; font-size:18px;">TP 1 BD (PDF)</h2>
-		<iframe
-			src="TP1SQL.pdf"
-			title="TP 1 BD"
-			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
-		></iframe>
+		<h2>TP 1 BD (PDF)</h2>
+		<iframe src="TP1SQL.pdf" title="TP 1 BD"></iframe>
 		<p style="margin-top:8px;">
 			<a class="button" href="TP1SQL.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
 		</p>
 
-		<h2 style="margin-top:24px; font-size:18px;">TP 2 SQL (PDF)</h2>
-		<iframe
-			src="TP2SQL.pdf"
-			title="TP 2 SQL"
-			style="width:100%; height:70vh; border:1px solid #bbb; border-radius:8px;"
-		></iframe>
+		<h2>TP 2 SQL (PDF)</h2>
+		<iframe src="TP2SQL.pdf" title="TP 2 SQL"></iframe>
 		<p style="margin-top:8px;">
 			<a class="button" href="TP2SQL.pdf" target="_blank" rel="noopener">Ouvrir dans un nouvel onglet</a>
 		</p>
