feat: Ajout de la page de certification pour le module RGPD et mise à jour de l'index

--- a/index.html
+++ b/index.html
@@ -185,6 +185,11 @@
                     <h3>MOOC EBIOS</h3>
                     <p>Certificationsobtenue grace au MOOC EBIOS.</p>
                 </a>
+                <a class="card" id="impair" href="Certifications/AtelierRGPD/atelierrgpd.html">
+                    <div class="card-icon">🏆</div>
+                    <h3>MOOC atelier RGPD</h3>
+                    <p>Certification obtenue grace au MOOC atelier RGPD.</p>
+                </a>
 
             </div>
         </section>
