feat: Ajout de la carte pour la Mission 10 - BDD Cinema dans index.html

--- a/index.html
+++ b/index.html
@@ -170,6 +170,11 @@
                     <h3>Mission 9</h3>
                     <p>Quiz</p>
         </a>
+        <a class="card" href="Mission10/index.html">
+                    <div class="card-icon">🎉</div>
+                    <h3>Mission 10</h3>
+                    <p>BDD Cinema</p>
+        </a>
             </div>
         </section>
         <section class="section">
