feat: Ajout d'une section PHP avec un lien vers la page de la bibliothèque de Vilgénis

--- a/index.html
+++ b/index.html
@@ -221,6 +221,17 @@
                 </a>
             </div>
         </section>
+
+        <section class="section">
+            <h2 class="section-title">💾 PHP</h2>
+            <div class="cards-grid">
+                <a class="card" id="impair" href="http://bibliotheque-vilgenis.infinityfree.me">
+                    <div class="card-icon">📄</div>
+                    <h3>Page php de bibliotheque-vilgenis</h3>
+                    <p>Page PHP de la bibliothèque de Vilgénis.</p>
+                </a>
+            </div>
+        </section>
     </main>
 
     <footer class="site-footer">
