--- a/Certifications/AtelierRGPD/atelierrgpd.html
+++ b/Certifications/AtelierRGPD/atelierrgpd.html
@@ -61,6 +61,82 @@
 		</div>
 		<p style="font-size: 14px; color: #666;">La formation sera complétée dès que la plateforme sera de nouveau accessible.</p>
 	</section>
+	
+	<section id="synthese-rgpd">
+    <h1>Synthèse de l'Atelier RGPD</h1>
+    <p>Résumé essentiel des 6 modules de la formation CNIL pour maîtriser les fondamentaux de la protection des données.</p>
+
+    <article>
+        <h2>Module 1 : Les notions clés</h2>
+        <p>Ce module définit le vocabulaire indispensable à connaître.</p>
+        <ul>
+            <li><strong>Donnée personnelle :</strong> Toute information permettant d'identifier une personne (nom, photo, numéro, etc.).</li>
+            <li><strong>Traitement :</strong> Toute opération sur la donnée (collecte, enregistrement, modification, etc.).</li>
+            <li><strong>Acteurs :</strong> Distinction entre le Responsable de traitement (décideur) et le Sous-traitant.</li>
+        </ul>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Module 2 : Les principes fondamentaux</h2>
+        <p>Les règles d'or pour qu'un fichier soit légal.</p>
+        <ul>
+            <li><strong>Finalité :</strong> Un objectif déterminé, explicite et légitime.</li>
+            <li><strong>Minimisation :</strong> Ne collecter que les données strictement nécessaires.</li>
+            <li><strong>Transparence :</strong> Informer les personnes et respecter leurs droits.</li>
+        </ul>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Module 3 : Les responsabilités</h2>
+        <p>Qui est responsable de quoi et quels sont les risques.</p>
+        <ul>
+            <li><strong>Accountability :</strong> L'obligation de documenter et prouver sa conformité.</li>
+            <li><strong>Sous-traitance :</strong> Nécessité d'un contrat clair définissant les obligations de chacun.</li>
+            <li><strong>Sanctions :</strong> Amendes administratives pouvant atteindre 4% du chiffre d'affaires mondial.</li>
+        </ul>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Module 4 : Le DPO et les outils</h2>
+        <p>Comment piloter la conformité au quotidien.</p>
+        <ul>
+            <li><strong>DPO (Délégué) :</strong> Chef d'orchestre qui informe, conseille et contrôle.</li>
+            <li><strong>Registre :</strong> La cartographie obligatoire des activités de traitement.</li>
+            <li><strong>Violations :</strong> Obligation de notifier la CNIL en 72h en cas de fuite de données.</li>
+        </ul>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Module 5 : Les collectivités territoriales</h2>
+        <p>Les spécificités du secteur public.</p>
+        <ul>
+            <li><strong>Le Maire/Président :</strong> Responsable légal du traitement pénalement responsable.</li>
+            <li><strong>Services :</strong> État civil, listes électorales, action sociale, police municipale.</li>
+            <li><strong>Open Data :</strong> Obligation d'anonymisation avant publication des données publiques.</li>
+        </ul>
+    </article>
+
+    <hr>
+
+    <article>
+        <h2>Module 6 : Travail et données personnelles (RH)</h2>
+        <p>La gestion des données des salariés.</p>
+        <ul>
+            <li><strong>Recrutement :</strong> Interdiction de collecter des infos sur la vie privée ou l'entourage.</li>
+            <li><strong>Cybersurveillance :</strong> Pas de surveillance permanente ni à l'insu du salarié.</li>
+            <li><strong>Droits :</strong> Le salarié peut accéder à son dossier professionnel et ses courriels.</li>
+        </ul>
+    </article>
+</section>
+
 
 	<nav>
 		<a href="../../index.html">Retour au menu principal</a>
