Refactor code structure for improved readability and maintainability

--- a/Certifications/AtelierRGPD/atelierrgpd.html
+++ b/Certifications/AtelierRGPD/atelierrgpd.html
@@ -20,35 +20,35 @@
 
 	<section id="module2">
 		<h2>Module 2 : Les principes de la protection des données</h2>
-		<iframe src="Certificat_Module2.pdf" title="Certification Module 2 RGPD">
+		<iframe src="module2.jpg" title="Certification Module 2 RGPD">
 			<div class="placeholder">Chargement de la certification…</div>
 		</iframe>
 	</section>
 
 	<section id="module3">
 		<h2>Module 3 : Les responsabilités des acteurs</h2>
-		<iframe src="Certificat_Module3.pdf" title="Certification Module 3 RGPD">
+		<iframe src="module3.jpg" title="Certification Module 3 RGPD">
 			<div class="placeholder">Chargement de la certification…</div>
 		</iframe>
 	</section>
 
 	<section id="module4">
 		<h2>Module 4 : Le DPO et les outils de la conformité</h2>
-		<iframe src="Certificat_Module4.pdf" title="Certification Module 4 RGPD">
+		<iframe src="module4.jpg" title="Certification Module 4 RGPD">
 			<div class="placeholder">Chargement de la certification…</div>
 		</iframe>
 	</section>
 
 	<section id="module5">
 		<h2>Module 5 : Les collectivités territoriales</h2>
-		<iframe src="Certificat_Module5.pdf" title="Certification Module 5 RGPD">
+		<iframe src="module5.jpg" title="Certification Module 5 RGPD">
 			<div class="placeholder">Chargement de la certification…</div>
 		</iframe>
 	</section>
 
 	<section id="module6">
 		<h2>Module 6 : Travail et données personnelles</h2>
-		<iframe src="Certificat_Module6.pdf" title="Certification Module 6 RGPD">
+		<iframe src="module6.jpg" title="Certification Module 6 RGPD">
 			<div class="placeholder">Chargement de la certification…</div>
 		</iframe>
 	</section>
